--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1 class="caption">Дизайн</h1>
       <p class="description"> <font color="#8b00ff">Д.Ж.А.Р.В.И.С. — искусственный интеллект, созданный Тони Старком, который позже управляет его бронёй Железного человека и бронёй Халкбастер для него.
           В фильме «Мстители: Эра Альтрона», после частичного уничтожения Альтроном, Д.Ж.А.Р.В.И.С. получает физическую форму.........
-      Такчто вы имеете возможность преобрести себе голосового помошнка </p>
+      Так что вы имеете возможность приобрести себе голосового помошнка </p>
      
           <form action="https://t.me/Zloy_164">
           <button class="button">Написать мне</button>
