--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
      <nav class="header-menu">
      <ul class="menu">
           <li class="menu-item"><a href="#maine-page">Главная</a></li>
-          <li class="menu-item"><a href="#about-me">Об авторе </a></li>
-          <li class="menu-item"><a href="#portfolio">работа</a></li>
+          <li class="menu-item"><a href="flex.html">Об авторе </a></li>
+          <li class="menu-item"><a href="flex.html">работа</a></li>
           <li class="menu-item"><a href="#contacts">контакты</a></li>
      </ul>
     </nav>
@@ -45,7 +45,7 @@
       <h1 class="caption">Дизайн</h1>
       <p class="description"> <font color="#8b00ff">Д.Ж.А.Р.В.И.С. — искусственный интеллект, созданный Тони Старком, который позже управляет его бронёй Железного человека и бронёй Халкбастер для него.
           В фильме «Мстители: Эра Альтрона», после частичного уничтожения Альтроном, Д.Ж.А.Р.В.И.С. получает физическую форму.........
-      Так что вы имеете возможность приобрести себе голосового помошнка </p>
+      Такчто вы имеете возможность преобрести себе голосового помошнка </p>
      
           <form action="https://t.me/Zloy_164">
           <button class="button">Написать мне</button>
