--- a/flez.html
+++ b/flez.html
@@ -1,4 +1,19 @@
+<!DOCTYPE html>
+</head>
+</body>
+<html lang="en">
+<head>
+<html>
+
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <title> Perfect Player</title>
+     <link rel="stylesheet" href="a.css">
+</head>
 <body background="4.jpg"></body>
-<tytle><font color="#8b00ff">Когда мне стало скушно я решил создать голосового помошника ждарвиса и итог у меня получилось</font></tytle>
+    <p class="description"></p><font color="#8b00ff">Когда мне стало скушно я решил создать голосового помошника ждарвиса и итог у меня получилось</font></tytle>
+
 <form action="index.html">
-    <button class="button">Назат</button>
+    <button class="button">Назад</button>
+</form>
