--- a/flex.html
+++ b/flex.html
@@ -1,6 +1,19 @@
+<!DOCTYPE html>
+</head>
+</body>
+<html lang="en">
+<head>
+<html>
+
+     <meta charset="UTF-8">
+     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+     <title> Perfect Player</title>
+     <link rel="stylesheet" href="a.css">
+</head>
 <body background="4.jpg"></body>
 <head><font color="#8b00ff"> Всем привет мое имя Виталий, многие меня зовут Витя. На даном этапе жизни занимаюсь програмированием,занятие так себе тк много воды и ничего нормального нету, Проживаю в Саратове
     учусь в техе.</font>
 </head>
 <form action="index.html">
-    <button class="button">Назат</button>
+    <button class="button">Назад</button>
