--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li class="menu-item"><a href="#contacts">контакты</a></li>
      </ul>
     </nav>
-    <a href="#" class="burger-icon">
+    <a href="flex.html" class="burger-icon">
      <span></span>
      <span></span>
      <span></span>
