--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
      <nav class="header-menu">
      <ul class="menu">
           <li class="menu-item"><a href="#maine-page">Главная</a></li>
-          <li class="menu-item"><a href="flez.html">Об авторе </a></li>
-          <li class="menu-item"><a href="flex.html">работа</a></li>
+          <li class="menu-item"><a href="flex.html">Об авторе </a></li>
+          <li class="menu-item"><a href="flez.html">работа</a></li>
           <li class="menu-item"><a href="#contacts">контакты</a></li>
      </ul>
     </nav>
-    <a href="flex.html" class="burger-icon">
+    <a href="flez.html" class="burger-icon">
      <span></span>
      <span></span>
      <span></span>
