--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
           В фильме «Мстители: Эра Альтрона», после частичного уничтожения Альтроном, Д.Ж.А.Р.В.И.С. получает физическую форму.........
       Такчто вы имеете возможность преобрести себе голосового помошнка </p>
      
-          <form action="https://t.me/Zloy_164">
-          <button class="button">Написать мне</button>
+          <form action="https://t.me/Jarvis_64_bot">
+          <button class="button">Заказать</button>
           </form>
           </div>
           </div>
