--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
           <li class="menu-item"><a href="#maine-page">Главная</a></li>
           <li class="menu-item"><a href="flex.html">Об авторе </a></li>
           <li class="menu-item"><a href="flez.html">работа</a></li>
-          <li class="menu-item"><a href="#contacts">контакты</a></li>
+          <li class="menu-item"><a href="what.html">контакты</a></li>
      </ul>
     </nav>
     <a href="flez.html" class="burger-icon">
+     <span></span>
      <span></span>
      <span></span>
      <span></span>
@@ -47,8 +48,8 @@
           В фильме «Мстители: Эра Альтрона», после частичного уничтожения Альтроном, Д.Ж.А.Р.В.И.С. получает физическую форму.........
       Такчто вы имеете возможность преобрести себе голосового помошнка </p>
      
-          <form action="https://t.me/Jarvis_64_bot">
-          <button class="button">Заказать</button>
+          <form action="https://t.me/Zloy_164">
+          <button class="button">Написать мне</button>
           </form>
           </div>
           </div>
